dev/external-name.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana-service
spec:
  type: ExternalName
  externalName: kibana-kibana.logging
