dev/dev-ingress-argo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ingress-argo
  namespace: argocd
  annotations:
    # AWS ALB and External DNS annotations
    alb.ingress.kubernetes.io/load-balancer-name: carmel-yoram-argo
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-0e52f2831206e0ac1,subnet-08a4531e265a47e89
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:992382545251:certificate/fe576a42-3b76-4aba-9ad3-33253d8e3f3e
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    external-dns.alpha.kubernetes.io/hostname: argo.yoram-izilov.com
spec:
  ingressClassName: aws-ingress-class
  defaultBackend:
    service:
      name: argocd-server
      port:
        number: 80
